<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.VerifyOtpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/image_view_verify_otp"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/verify_otp"
                android:layout_marginTop="60dp" />
            <TextView
                android:id="@+id/tv_enter_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/verify_code"
                android:textSize="28sp"
                android:padding="10dp"
                android:fontFamily="sans-serif-black"
                android:layout_below="@id/image_view_verify_otp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_enter_veri_code_desc"
                android:text="@string/enter_veri_code_desc"
                android:layout_below="@id/tv_enter_verification_code"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/login_enter_otp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hint_enter_otp"
                android:maxLength="6"
                android:textColorHint="#2CA7E0"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/edit"
                android:padding="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_enter_veri_code_desc"
                />

            <Button
                android:id="@+id/button_resend_otp"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_enter_otp"
                android:text="@string/resend_otp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/size_58_dp"
                android:paddingTop="8dp"
                android:textAllCaps="false"
                android:background="@drawable/custom_borderless_btn"
                android:textColor="@color/colorRed"/>


            <Button
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/verify"
                android:textColor="#fff"
                android:layout_marginTop="60dp"
                android:background="@drawable/button"
                android:id="@+id/button_verify_otp"
                android:layout_below="@id/login_enter_otp"
                android:layout_centerHorizontal="true"

                />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>