<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".provider.ProviderHomeActivity">

    <!--Appbar android:theme="@style/AppTheme.AppBarOverlay"-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--Toolbar-->
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar_main"
            android:background="@color/color_toolbar_bottom_nav">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/toolbar_title_main"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textColor="@color/colorPrimary"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/provider_toolbartab_job_status"
            android:visibility="gone"
            android:background="@color/white"
            app:layout_collapseMode="pin"
            >
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/provider_tablayout_status_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabTextColor="@color/colorPrimary"
                app:tabIndicatorColor="@color/colorPrimary"
                app:tabSelectedTextColor="@color/colorPrimary"
                app:tabMode="fixed"
               >
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_active"

                    />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_accepted"
                    />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finished"
                    />

            </com.google.android.material.tabs.TabLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!--Fragments container-->

    <include
        layout="@layout/provider_content_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_provider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


    <!-- Bottom Navigation View -->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_provider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="@color/color_toolbar_bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/provider_bottom_nav_menu" />




</androidx.constraintlayout.widget.ConstraintLayout>